# SAAI

./: CodeBase-Context.md  README.md  index.html  package-lock.json  package.json
docs/: Architecture-Overview.md  SAAI-Manifesto.md
src/: App.tsx
src/agents/: ActionAgent.ts  EthicsAgent.ts  MemoryAgent.ts  PerceptionAgent.ts  main.py  requirements.txt
src/agents/local/: LocalActionAgent.ts  LocalMemoryAgent.ts  LocalPerceptionAgent.ts
src/agents/real/: DataEngineerAgent.ts  EDAAnalystAgent.ts
src/components/: LocalDashboard.tsx
src/components/real/: APIConfiguration.tsx  DataUploader.tsx  ModelTrainer.tsx
src/core/: Cargo.toml  CognitiveFabric.ts  ConsensusManager.ts  NanoCoreSimulator.ts  build.rs
src/core/local/: LocalCognitiveFabric.ts  LocalResourceMonitor.ts
src/core/src/: lib.rs  main.rs
src/core/src/communication/: mod.rs
src/core/src/config/: mod.rs
src/core/src/consensus/: mod.rs
src/core/src/metrics/: mod.rs
src/core/src/nano_cores/: consensus_participant.rs  hardware_core.rs  mod.rs  network_core.rs  os_core.rs  security_core.rs
src/core/src/security/: mod.rs
src/deployment/: DeploymentManager.ts
src/hooks/: useAgents.ts  useLocalSAAI.ts  useMECA.ts  useSAAISystem.ts
src/infrastructure/: ConfigManager.ts  LoggingAuditor.ts  SecureCredentialStore.ts
src/local/: LocalSAAISystem.ts
src/meca/: ChaosEngineering.ts  EvolutionEngine.ts
src/meca/local/: LocalEvolutionEngine.ts
src/optimization/: PerformanceOptimizer.ts
src/services/: AIService.ts  APIManager.ts  DataProcessor.ts  ModelBuilder.ts
src/testing/: ContinuousTestingEngine.ts
src/ui/: package.json
src/ui/components/: AdvancedDashboard.tsx  CognitiveCopilot.tsx
